--- a/index.html
+++ b/index.html
@@ -80,33 +80,42 @@
                     <!-- LISTA DE PRATOS EM DESTAQUE -->
                     <ul class="secaoPratosDestaque__listaPratos">
                         <li class="secaoPratosDestaque__itemPrato">
-                            <a href="">
-                                <figure class="secaoPratosDestaque__imagemPrato">
+                            <a>
+                                <figure>
                                     <img src="./assets/img/produto.png" alt="Combo hamburguer + batata frita">
                                     <figcaption>Combo hamburguer + batata frita</figcaption>
                                 </figure>
-                                <h3 class="secaoPratosDestaque__nomePrato">Combo hamburguer + batata frita</h3>
-                                <span class="secaoPratosDestaque__precoPrato">R$ 21,90</span>
+                                <div>
+                                    <h3>Combo hamburguer + batata frita</h3>
+                                    <p hidden="">Hamburguer com batata frita</p>
+                                    <span>21.9</span>
+                                </div>
                             </a>
                         </li>
                         <li class="secaoPratosDestaque__itemPrato">
-                            <a href="">
-                                <figure class="secaoPratosDestaque__imagemPrato">
+                            <a>
+                                <figure>
                                     <img src="./assets/img/produto.png" alt="Combo hamburguer + batata frita">
                                     <figcaption>Combo hamburguer + batata frita</figcaption>
                                 </figure>
-                                <h3 class="secaoPratosDestaque__nomePrato">Combo hamburguer + batata frita</h3>
-                                <span class="secaoPratosDestaque__precoPrato">R$ 21,90</span>
+                                <div>
+                                    <h3>Combo hamburguer + batata frita</h3>
+                                    <p hidden="">Hamburguer com batata frita</p>
+                                    <span>21.9</span>
+                                </div>
                             </a>
                         </li>
                         <li class="secaoPratosDestaque__itemPrato">
-                            <a href="">
-                                <figure class="secaoPratosDestaque__imagemPrato">
+                            <a>
+                                <figure>
                                     <img src="./assets/img/produto.png" alt="Combo hamburguer + batata frita">
                                     <figcaption>Combo hamburguer + batata frita</figcaption>
                                 </figure>
-                                <h3 class="secaoPratosDestaque__nomePrato">Combo hamburguer + batata frita</h3>
-                                <span class="secaoPratosDestaque__precoPrato">R$ 21,90</span>
+                                <div>
+                                    <h3>Combo hamburguer + batata frita</h3>
+                                    <p hidden="">Hamburguer com batata frita</p>
+                                    <span>21.9</span>
+                                </div>
                             </a>
                         </li>
                     </ul>
@@ -120,37 +129,29 @@
                         <h2 class="secaoSobremesas__titulo">Sobremesas</h2>
                         <ul class="secaoSobremesas__listaSobremesas">
                             <li class="secaoSobremesas__itemSobremesa">
-                                <a href="">
-                                
-                                    <!-- INFORMAÇÕES DO PRATO -->
-                                    <div class="secaoSobremesas__descricaoSobremesa">
-                                        <h3>Brownie de chocolate</h3>
-                                        <p>O clássico brownie para quem ama um docinho de sobremesa.</p>
-                                        <span>R$ 18,00</span>
-                                    </div>
-
-                                    <figure class="secaoSobremesas__imagemSobremesa">
+                                <a>
+                                    <figure>
                                         <img src="./assets/img/sobremesa.png" alt="Brownie de chocolate">
                                         <figcaption>Brownie de chocolate</figcaption>
                                     </figure>
-
+                                    <div>
+                                        <h3>Brownie de chocolate</h3>
+                                        <p>O clássico brownie para quem ama um docinho de sobremesa.</p>
+                                        <span>21.9</span>
+                                    </div>
                                 </a>
                             </li>
                             <li class="secaoSobremesas__itemSobremesa">
-                                <a href="">
-                                
-                                    <!-- INFORMAÇÕES DO PRATO -->
-                                    <div class="secaoSobremesas__descricaoSobremesa">
-                                        <h3>Brownie de chocolate</h3>
-                                        <p>O clássico brownie para quem ama um docinho de sobremesa.</p>
-                                        <span>R$ 18,00</span>
-                                    </div>
-
-                                    <figure class="secaoSobremesas__imagemSobremesa">
+                                <a>
+                                    <figure>
                                         <img src="./assets/img/sobremesa.png" alt="Brownie de chocolate">
                                         <figcaption>Brownie de chocolate</figcaption>
                                     </figure>
-
+                                    <div>
+                                        <h3>Brownie de chocolate</h3>
+                                        <p>O clássico brownie para quem ama um docinho de sobremesa.</p>
+                                        <span>21.9</span>
+                                    </div>
                                 </a>
                             </li>
                         </ul>
