ajustando html carrinho

--- a/index.html
+++ b/index.html
@@ -165,18 +165,18 @@
                             <!-- LISTA DE ITENS NO CARRINHO -->
                             <ul class="secaoCarrinho__listaItens">
                                 <li class="secaoCarrinho__item">
-                                    <div class="secaoCarrinho__itemDescricao">
+                                    <div>
                                         <h3>Porção onion rings</h3>
                                         <span>R$ 5,50</span>
                                     </div>
-                                    <button class="secaoCarrinho__botaoRemover">Remover</button>
+                                    <button>Remover</button>
                                 </li>
                                 <li class="secaoCarrinho__item">
-                                    <div class="secaoCarrinho__itemDescricao">
+                                    <div>
                                         <h3>Porção onion rings</h3>
                                         <span>R$ 5,50</span>
                                     </div>
-                                    <button class="secaoCarrinho__botaoRemover">Remover</button>
+                                    <button>Remover</button>
                                 </li>
                             </ul>
 
