--- a/index.html
+++ b/index.html
@@ -99,26 +99,13 @@
                         <div class="secaoCarrinho__conteudo">
                             <!-- LISTA DE ITENS NO CARRINHO -->
                             <ul class="secaoCarrinho__listaItens">
-                                <li class="secaoCarrinho__item">
-                                    <div>
-                                        <h3>Porção onion rings</h3>
-                                        <span>R$ 5,50</span>
-                                    </div>
-                                    <button>Remover</button>
-                                </li>
-                                <li class="secaoCarrinho__item">
-                                    <div>
-                                        <h3>Porção onion rings</h3>
-                                        <span>R$ 5,50</span>
-                                    </div>
-                                    <button>Remover</button>
-                                </li>
+                                
                             </ul>
 
                             <!-- TOTAL -->
                             <div class="secaoCarrinho__total">
                                 <p>Total</p>
-                                <span>R$ 23,50</span>
+                                <span>0,00</span>
                             </div>
 
                             <div class="secaoCarrinho__formaPagamento">
